--- a/Pages/ManageItemCards.cshtml
+++ b/Pages/ManageItemCards.cshtml
@@ -231,6 +231,9 @@
                                 <td scope="row">@item.SupplierName</td>
                                 <td scope="row">@item.DocumentType</td>
                                 <td scope="row">@item.ReceiptDocumentNumber</td>
+                                @* <td>
+                                    <a href="/ViewItemCards">View</a>
+                                </td> *@
 
                             </tr>
                         }
