--- a/Pages/ManageItemCards.cshtml
+++ b/Pages/ManageItemCards.cshtml
@@ -194,18 +194,19 @@
                             <th scope="col" class="border-0 rounded-start">Unit Of Measure</th>
                             <th scope="col" class="border-0 rounded-start">Chemical</th>
                             <th scope="col" class="border-0 rounded-start">Hazard Type</th>
-                            <th scope="col" class="border-0 rounded-start">Expiry Date</th>
-                            <th scope="col" class="border-0 rounded-start">Type Of Asset</th>
-                            <th scope="col" class="border-0 rounded-start">Minimum</th>
-                            <th scope="col" class="border-0 rounded-start">Reorder Limit</th>
-                            <th scope="col" class="border-0 rounded-start">Warehouse Name</th>
-                            <th scope="col" class="border-0 rounded-start">Quantity Received</th>
-                            <th scope="col" class="border-0 rounded-start">Date Of Entry</th>
+                            @* <th scope="col" class="border-0 rounded-start">Expiry Date</th>
+                            <th scope="col" class="border-0 rounded-start">Type Of Asset</th> *@
+                            @* <th scope="col" class="border-0 rounded-start">Minimum</th>
+                            <th scope="col" class="border-0 rounded-start">Reorder Limit</th> *@
+                            <th scope="col" class="border-0 rounded-start">Quantity Available</th>
+                            @* <th scope="col" class="border-0 rounded-start">Warehouse Name</th> *@
+
+                            @* <th scope="col" class="border-0 rounded-start">Date Of Entry</th>
                             <th scope="col" class="border-0 rounded-start">Room</th>
                             <th scope="col" class="border-0 rounded-start">Shelf</th>
                             <th scope="col" class="border-0 rounded-start">Supplier</th>
                             <th scope="col" class="border-0 rounded-start">Receipt Document Type</th>
-                            <th scope="col" class="border-0 rounded-start">Receipt Document Number</th>
+                            <th scope="col" class="border-0 rounded-start">Receipt Document Number</th> *@
                             <th scope="col" class="border-0 rounded-end"></th>                         
                         </tr>
                     </thead>
@@ -216,21 +217,21 @@
                                 <td scope="row">@item.ItemName</td>
                                 <td scope="row">@item.ItemCode</td>
                                 <td scope="row">@item.ItemDescription</td>
-                                <td scope="row">@item.UnitOfMeasure</td>
+                                <td scope="row">@item.UnitOfmeasure</td>
                                 <td scope="row">@item.Chemical</td>
                                 <td scope="row">@item.HazardTypeName</td>
-                                <td scope="row">@item.ExpiryDate?.ToString("yyyy-MM-dd")</td>
-                                <td scope="row">@item.TypeOfAsset</td>
-                                <td scope="row">@item.Minimum</td>
-                                <td scope="row">@item.ReorderLimit</td>
-                                <td scope="row">@item.WarehouseName</td>
-                                <td scope="row">@item.QuantityReceived</td>
-                                <td scope="row">@item.DateOfEntry</td>
+                                @* <td scope="row">@item.ExpiryDate?.ToString("yyyy-MM-dd")</td> *@
+                                @* <td scope="row">@item.TypeOfAsset</td>  *@
+                                @* <td scope="row">@item.Minimum</td>
+                                <td scope="row">@item.ReorderLimit</td>  *@
+                                <td scope="row">@item.QuantityAvailable</td>
+                                @* <td scope="row">@item.WarehouseName</td> *@
+                                @* <td scope="row">@item.DateOfEntry</td>
                                 <td scope="row">@item.RoomName</td>
                                 <td scope="row">@item.ShelfName</td>
                                 <td scope="row">@item.SupplierName</td>
                                 <td scope="row">@item.DocumentType</td>
-                                <td scope="row">@item.ReceiptDocumentNumber</td>
+                                <td scope="row">@item.ReceiptDocumentNumber</td> *@
                                 @* <td>
                                     <a href="/ViewItemCards">View</a>
                                 </td> *@
