--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -206,12 +206,12 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group mb-4" style="width: 48%;">
                                         <label>@Model.lblUnitPrice</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                        <input asp-for="ItemsForReport[0].UnitPrice" type="number"  id="UnitPrice" step="0.01" name="ItemsForReport[0].UnitPrice" class="form-control"  />
+                                        <input asp-for="ItemsForReport[0].UnitPrice" type="number"  id="UnitPrice"  name="ItemsForReport[0].UnitPrice" class="form-control"  />
                                     </div>
 
                                     <div class="form-group mb-4" style="width: 48%;">
                                         <label>@Model.lblTotalPrice</label>
-                                        <input type="number"  id="TotalPrice" step="0.01" name="TotalPrice" class="form-control" readonly/>
+                                        <input type="number"  id="TotalPrice"  name="TotalPrice" class="form-control" readonly/>
                                     </div>
                                 </div>
 
@@ -370,11 +370,11 @@
                 <div class="d-flex justify-content-between">
                     <div class="form-group mb-4" style="width: 48%;">
                         <label>Unit Price</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                        <input type="number" step="0.01" name="ItemsForReport[${itemIndex}].UnitPrice" class="form-control" required/>
+                        <input type="number"  name="ItemsForReport[${itemIndex}].UnitPrice" class="form-control" required/>
                     </div>
                     <div class="form-group mb-4" style="width: 48%;">
                         <label>Total Price</label>
-                        <input type="number" step="0.01" name="ItemsForReport[${itemIndex}].TotalPrice" class="form-control" readonly />
+                        <input type="number"  name="ItemsForReport[${itemIndex}].TotalPrice" class="form-control" readonly />
                     </div>
                 </div>
                 <div class="form-group mb-4">
