--- a/Pages/ManageItemCards.cshtml
+++ b/Pages/ManageItemCards.cshtml
@@ -198,8 +198,8 @@
                             <th scope="col" class="border-0 rounded-start">Type Of Asset</th> *@
                             @* <th scope="col" class="border-0 rounded-start">Minimum</th>
                             <th scope="col" class="border-0 rounded-start">Reorder Limit</th> *@
-                            <th scope="col" class="border-0 rounded-start">Quantity Available</th>
-                            @* <th scope="col" class="border-0 rounded-start">Warehouse Name</th> *@
+                            @* <th scope="col" class="border-0 rounded-start">Quantity Available</th> *@
+                            <th scope="col" class="border-0 rounded-start">Warehouse Name</th>
 
                             @* <th scope="col" class="border-0 rounded-start">Date Of Entry</th>
                             <th scope="col" class="border-0 rounded-start">Room</th>
@@ -217,15 +217,15 @@
                                 <td scope="row">@item.ItemName</td>
                                 <td scope="row">@item.ItemCode</td>
                                 <td scope="row">@item.ItemDescription</td>
-                                <td scope="row">@item.UnitOfmeasure</td>
+                                <td scope="row">@item.UnitOfMeasure</td>
                                 <td scope="row">@item.Chemical</td>
                                 <td scope="row">@item.HazardTypeName</td>
                                 @* <td scope="row">@item.ExpiryDate?.ToString("yyyy-MM-dd")</td> *@
                                 @* <td scope="row">@item.TypeOfAsset</td>  *@
                                 @* <td scope="row">@item.Minimum</td>
                                 <td scope="row">@item.ReorderLimit</td>  *@
-                                <td scope="row">@item.QuantityAvailable</td>
-                                @* <td scope="row">@item.WarehouseName</td> *@
+                                @* <td scope="row">@item.QuantityAvailable</td> *@
+                                <td scope="row">@item.WarehouseName</td>
                                 @* <td scope="row">@item.DateOfEntry</td>
                                 <td scope="row">@item.RoomName</td>
                                 <td scope="row">@item.ShelfName</td>
