--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -164,98 +164,123 @@
                         <div class="col-lg-12 col-sm-12">
                             <div id="returnEntriesWrapper">
                                 <div class="return-entry border p-3 mb-3 rounded position-relative">
-                                    <div class="my-4">
-                                        <label for="RequestingPlace">@Model.lblItemGroups</label>
-                                        <select class="form-select" id="itemGroup" name="itemGroup" onchange="filterItemsByGroup()">
-                                            @if (Model.ItemGroups != null)
-                                            {
-                                                foreach (var item in Model.ItemGroups)
+                                    <div class="d-flex my-4">
+                                        <div class=" me-2" style="width: 49%;">
+                                            <label for="RequestingPlace">@Model.lblItemGroups</label>
+                                            <select class="form-select" id="itemGroup" name="itemGroup" onchange="filterItemsByGroup()">
+                                                @if (Model.ItemGroups != null)
                                                 {
-                                                    <option value="@item.GroupCode">@item.GroupDesc</option>
+                                                    foreach (var item in Model.ItemGroups)
+                                                    {
+                                                        <option value="@item.GroupCode">@item.GroupDesc</option>
+                                                    }
                                                 }
-                                            }
-                                        </select>
-                                    </div>
-                                    <div class="mb-4">
-                                        <label>@Model.lblItemName (@Model.lblArabicLanguage)</label>
-                                        <select class="ArabicItemName form-select" id="ArabicItemName" name="ArabicItemName" onchange="onItemChange(this, 'EnglishArabicName')">
-                                            <option value="">Select Item </option>
-                                            @foreach (var item in Model.Items)
-                                            {
-                                                if (item.Ended == null)
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group  ms-2 " style="width: 49%;">
+                                            <label>@Model.lblItemName (@Model.lblArabicLanguage)</label>
+                                            <select class="ArabicItemName form-select" id="ArabicItemName" name="ArabicItemName" onchange="onItemChange(this, 'EnglishArabicName')">
+                                                <option value="">Select Item </option>
+                                                @foreach (var item in Model.ItemCards)
                                                 {
-                                                    <option value="@item.ItemId"
+                                                    
+                                                        <option value="@item.ItemId"
                                                             data-id="@item.ItemId"
                                                             data-group="@item.GroupCode"
                                                             data-code="@item.ItemCode"
                                                             data-description="@item.ItemDescription"
-                                                            data-unit="@item.Unit?.UnitCode">
-                                                        @item.ItemName
-                                                    </option>
+                                                            data-chemical="@item.Chemical" data-risk="@item.HazardTypeName"
+                                                            data-unit="@item.UnitOfmeasure" 
+                                                            >
+                                                            @item.ItemName
+                                                        </option>
+                                                    
                                                 }
-                                            }
-                                        </select>
+                                            </select>
+                                        </div>
                                     </div>
-                                    <div class="mb-4">
-                                        <label for="EnglishArabicName">@Model.lblItemName (@Model.lblEnglishLanguage)</label>
-                                        <select class="EnglishArabicName form-select" id="EnglishArabicName" name="EnglishArabicName" onchange="onItemChange(this, 'ArabicItemName')">
-                                            <option value="">Select Item </option>
-                                            @foreach (var item in Model.Items)
-                                            {
-                                                if (item.Ended == null)
+                                   
+
+                                    <div class="d-flex">
+                                       
+                                        <div class="form-group mb-4 me-2" style="width: 49%;">
+                                            <label for="EnglishArabicName">@Model.lblItemName (@Model.lblEnglishLanguage)</label>
+                                            <select class="EnglishArabicName form-select" id="EnglishArabicName" name="EnglishArabicName" onchange="onItemChange(this, 'ArabicItemName')">
+                                                <option value="">Select Item </option>
+                                                @foreach (var item in Model.ItemCards)
                                                 {
                                                     <option value="@item.ItemId"
-                                                            data-id="@item.ItemId"
-                                                            data-group="@item.GroupCode"
-                                                            data-code="@item.ItemCode"
-                                                            data-description="@item.ItemDescription"
-                                                            data-unit="@item.Unit?.UnitCode">
+                                                        data-id="@item.ItemId"
+                                                        data-group="@item.GroupCode"
+                                                        data-code="@item.ItemCode"
+                                                        data-description="@item.ItemDescription"
+                                                        data-chemical="@item.Chemical" data-risk="@item.HazardTypeName"
+                                                        data-unit="@item.UnitOfmeasure" 
+                                                        >
                                                         @item.ItemName
                                                     </option>
+                                                    
                                                 }
-                                            }
-                                        </select>
-                                    </div>
-                                    <div class="mb-4">
+                                            </select>
+                                        </div>
+
+                                        <div class="mb-4 ms-2" style="width: 49%;">
                                         <label for="itemCode">@Model.lblItemCode</label>
-                                        <input type="text" class="ItemCode form-control" id="ItemCode" readonly>
+                                            <input type="text" class="ItemCode form-control" id="ItemCode" readonly>
+                                        </div>
                                     </div>
+                                   
                                     <div class="mb-4">
                                         <label for="itemDescription">@Model.lblItemDescription</label>
                                         <input type="text" class="ItemDescription form-control" id="ItemDescription" readonly>
                                     </div>
-                                    <div class="mb-4">
-                                        <label for="typeofAsset">@Model.lblTypeofAsset</label>
-                                        <input type="text" class="typeofAsset form-control" id="typeofAsset" readonly>
+
+                                    <div class="d-flex">
+                                        <div class="mb-4 me-2" style="width: 49%;">
+                                            <label for="typeofAsset">@Model.lblTypeofAsset</label>
+                                            <input type="text" class="typeofAsset form-control" id="typeofAsset" readonly>
+                                        </div>
+                                        <div class="mb-4 ms-2" style="width: 49%;">
+                                            <label for="chemical">@Model.lblChemical</label>
+                                            <input type="text" class="chemical form-control" id="chemical" readonly>
+                                        </div>
                                     </div>
-                                    <div class="mb-4">
-                                        <label for="chemical">@Model.lblChemical</label>
-                                        <input type="text" class="chemical form-control" id="chemical" readonly>
+                                    
+                                    <div class="d-flex">
+                                        <div class="mb-4 me-2" style="width: 49%;">
+                                            <label for="RiskRating">@Model.lblRiskRating</label>
+                                            <input type="text" class="RiskRating form-control" id="RiskRating" readonly>
+                                        </div>
+                                        <div class="mb-4 ms-2" style="width: 49%;">
+                                            <label for="UnitofMeasure">@Model.lblUnitOfMeasure</label>
+                                            <input type="text" class="UnitofMeasure form-control" id="UnitofMeasure" readonly>
+                                        </div>
+
                                     </div>
-                                    <div class="mb-4">
-                                        <label for="RiskRating">@Model.lblRiskRating</label>
-                                        <input type="text" class="RiskRating form-control" id="RiskRating" readonly>
+                                    
+                                    <div class="d-flex">
+                                        <div class="mb-4 me-2" style="width: 49%;">
+                                            <label for="Quantity">@Model.lblQuantity</label>
+                                            <input type="text" name="Quantity" value="@Model.Quantity" class="form-control Quantity" id="Quantity">
+                                        </div>
+                                        <div class="mb-4 ms-2" style="width: 49%;">
+                                            <label for="amountSpent">@Model.lblAmountSpent</label>
+                                            <input type="text" name="amountSpent" value="" class="form-control" id="amountSpent">
+                                        </div>
                                     </div>
-                                    <div class="mb-4">
-                                        <label for="UnitofMeasure">@Model.lblUnitOfMeasure</label>
-                                        <input type="text" class="UnitofMeasure form-control" id="UnitofMeasure" readonly>
+                                    
+                                    <div class="d-flex">
+                                        <div class="mb-4 me-2" style="width: 49%;">
+                                            <label for="UnitPrice">@Model.lblUnitPrice</label>
+                                            <input type="text" name="UnitPrice" value="" class="form-control UnitPrice" id="UnitPrice">
+                                        </div>
+                                        <div class="mb-4 ms-2" style="width: 49%;">
+                                            <label for="TotalPrice">@Model.lblTotalPrice</label>
+                                            <input type="text" name="TotalPrice" value="" class="form-control TotalPrice" id="TotalPrice">
+                                        </div>
                                     </div>
-                                    <div class="mb-4">
-                                        <label for="Quantity">@Model.lblQuantity</label>
-                                        <input type="text" name="Quantity" value="@Model.Quantity" class="form-control Quantity" id="Quantity">
-                                    </div>
-                                    <div class="mb-4">
-                                        <label for="amountSpent">@Model.lblAmountSpent</label>
-                                        <input type="text" name="amountSpent" value="" class="form-control" id="amountSpent">
-                                    </div>
-                                    <div class="mb-4">
-                                        <label for="UnitPrice">@Model.lblUnitPrice</label>
-                                        <input type="text" name="UnitPrice" value="" class="form-control UnitPrice" id="UnitPrice">
-                                    </div>
-                                    <div class="mb-4">
-                                        <label for="TotalPrice">@Model.lblTotalPrice</label>
-                                        <input type="text" name="TotalPrice" value="" class="form-control TotalPrice" id="TotalPrice">
-                                    </div>
+                                    
                                     <div class="mb-4">
                                         <label for="Comments">@Model.lblComments</label>
                                         <input type="text" class="form-control" id="Comments" name="Comments" value="@Model.Comments" />
