--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -168,8 +168,10 @@
                                     </div>
                                     <div class="form-group mb-4 ms-2 flex-fill">
                                         <label>@Model.lblItemName</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                        <select  class="form-control" id="ItemName_@i" asp-for="@Model.ItemsForReport[@i].ItemId" name="ItemsForReport[@i].ItemId" >
-                                            <option value="">Select Item</option>
+                                        <select  class="form-control" id="ItemName_@i" name="ItemsForReport[@i].ItemId" >
+                                            <option value="" selected="@(Model.ItemsForReport[i].ItemId == null || Model.ItemsForReport[i].ItemId == 0 ? "selected" : null)">
+                                                Select Item
+                                            </option>
                                             @foreach (var item in Model.Items)
                                             {
                                                 var UnitCode = Model.Units.FirstOrDefault(u => u.Id == item.UnitId)?.UnitCode ?? "";
@@ -181,7 +183,8 @@
                                                         data-itemdesc="@item.ItemDescription"
                                                         data-unitid="@item.UnitId"
                                                         data-unitname="@UnitCode"
-                                                        data-groupcode="@ItemGroup">
+                                                        data-groupcode="@ItemGroup"
+                                                        selected="@(item.ItemId == Model.ItemsForReport[i].ItemId ? "selected" : null)">
                                                     @item.ItemName
                                                 </option>
                                             }
